gccida/g3/start_sequence
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/start_sequence/src/emit-rtl.c:4906:12: error: expected expression
*( _OWORD *)( v1 + 8) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/start_sequence/src/emit-rtl.c:4906:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v1 + 8) = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/start_sequence/src/obj/emit-rtl.o] Error 1
